@@ -9,7 +9,7 @@
     :name "autoloads"
     :path ""
     :autoload-file "rudel-loaddefs.el"
-    :autoload-dirs '("." "jupiter" "socket" "tls" "xmpp" "obby" "wave" "zeroconf")
+    :autoload-dirs '("." "jupiter" "socket" "tls" "xmpp" "irc" "obby" "wave" "zeroconf")
     )
    (ede-proj-target-elisp "compile"
     :name "rudel"
